<resources>
    <string name="app_name">SimpleTime</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="forgot_username">Forgot username?</string>
    <string name="buttons">Buttons</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="simpletime">SimpleTime</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_email">Enter your email address</string>
    <string name="create_account">Create an account</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="mood">Mood</string>
    <string name="following">Following</string>
    <string name="dailytop">Daily Top</string>
    <string name="weeklytop">Weekly Top</string>
    <string name="official">Official</string>
    <string name="categories">Categories</string>
    <string name="usergreet"></string>
    <string name="Report">Report</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="myTestMp4">"https://download.blender.org/demo/movies/BBB/bbb_sunflower_1080p_30fps_normal.mp4"</string>
</resources>