<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".ActivityLogin" >

    <!--  Logo image view  -->

    <!--  SimpleTime text view  -->

    <ImageView
        android:id="@+id/login_imageLogo"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/login_btnCreateAcc"
        style="@style/log_in"
        android:layout_width="296dp"
        android:layout_height="54dp"
        android:background="@drawable/strokebuttonbold"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create_account"
        android:textAppearance="@style/log_in"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <TextView
        android:id="@+id/login_textName"
        android:layout_width="49dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="268dp"
        android:fontFamily="@font/roboto"
        android:gravity="top"
        android:text="@string/name"
        android:textAppearance="@style/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_enterName"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/strokebutton"
        android:hint="@string/hint_name"
        android:paddingStart="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/login_textPassword"
        android:layout_width="81dp"
        android:layout_height="21dp"
        android:layout_marginTop="372dp"
        android:gravity="top"
        android:text="@string/password"
        android:textAppearance="@style/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_enterPassword"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="408dp"
        android:background="@drawable/strokebutton"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingStart="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login_btnForgotPassword"
        style="@style/forgot_pass"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="464dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btnForgotUsername"
        style="@style/forgot_pass"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="464dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgot_username"
        android:textAppearance="@style/forgot_pass"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_textSimpletime"
        android:layout_width="260dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="208dp"
        android:fontFamily="@font/tauri"
        android:gravity="center_horizontal|top"
        android:text="@string/simpletime"
        android:textAppearance="@style/simpletime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/login_btnLogin"
        style="@style/log_in"
        android:layout_width="296dp"
        android:layout_height="56dp"
        android:layout_marginTop="528dp"
        android:background="@drawable/filledbutton"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--  Log in button -->

    <!--  Create an account button -->

    <!--  Name text view  -->

    <!--  Enter your name text input  -->

    <!--  Password text view  -->

    <!--  Enter your password text input  -->

    <!--  Forgot password button  -->

    <!--  Forgot username button  -->

</androidx.constraintlayout.widget.ConstraintLayout>