<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".SecondFragment" >

    <ImageView
        android:id="@+id/forgotPass_btnBack_imageLogo"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />


    <!--  Log in button -->
    <TextView
        android:id="@+id/forgotPass_textSimpletime"
        android:layout_width="260dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="204dp"
        android:fontFamily="@font/tauri"
        android:gravity="center_horizontal|top"
        android:text="@string/simpletime"
        android:textAppearance="@style/simpletime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/forgotPass_btnBack"
        style="@style/log_in"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginTop="680dp"
        android:background="@drawable/smallbutton"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/back"
        android:textAppearance="@style/back"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/forgotPass_submit"
        style="@style/submit"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginTop="412dp"
        android:background="@drawable/smallbuttonfilled"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/submit"
        android:textAppearance="@style/submit"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/forgotPass_enterEmail"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="324dp"
        android:background="@drawable/strokebutton"
        android:hint="@string/hint_email"
        android:paddingStart="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/forgotPass_textEmail"
        android:layout_width="49dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="296dp"
        android:fontFamily="@font/roboto"
        android:gravity="top"
        android:text="@string/email"
        android:textAppearance="@style/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>