<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".UserHomeActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-14dp">


    <Button
        android:id="@+id/userHome_btnMood"
        style="@style/log_in"
        android:layout_width="248dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/filledbuttonshort"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_medium"

        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/mood"
        android:textAlignment="viewStart"
        android:textAppearance="@style/log_in"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userHome_userGreeting" />

    <Button
        android:id="@+id/userHome_btnMoodFollowing"
        style="@style/log_in"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/filledbuttonshort"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/following"
        android:textAlignment="viewStart"
        android:textAppearance="@style/log_in"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userHome_btnMood" />


    <Button
        android:id="@+id/userHome_btnMoodDailytop"
        style="@style/log_in"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/filledbuttonshort"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/dailytop"
        android:textAlignment="viewStart"
        android:textAppearance="@style/log_in"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userHome_btnMoodFollowing" />

    <Button
        android:id="@+id/userHome_btnWeeklytop"
        style="@style/log_in"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/filledbuttonshort"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/weeklytop"
        android:textAlignment="viewStart"
        android:textAppearance="@style/log_in"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userHome_btnMoodDailytop" />

    <Button
        android:id="@+id/userHome_btnOfficial"
        style="@style/log_in"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/filledbuttonshort"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:text="@string/official"
        android:textAlignment="viewStart"
        android:textAppearance="@style/log_in"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userHome_btnWeeklytop" />

    <ImageView
        android:id="@+id/userHome_sidebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userHome_btnSearch"
        app:srcCompat="@drawable/strokebuttonvertical" />

    <TextView
        android:id="@+id/userHome_userGreeting"
        android:layout_width="206dp"
        android:layout_height="53dp"

        android:layout_marginTop="32dp"
        android:text="@string/usergreet"
        android:textAppearance="@style/categories"
        app:layout_constraintEnd_toEndOf="@+id/userHome_categories"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/userHome_categories"
        app:layout_constraintTop_toBottomOf="@+id/userHome_categories" />

    <TextView
        android:id="@+id/userHome_categories"
        android:layout_width="192dp"
        android:layout_height="34dp"
        android:layout_marginStart="48dp"

        android:layout_marginTop="56dp"
        android:text="@string/categories"
        android:textAppearance="@style/categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/userHome_btnSearch"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/strokebuttonsmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/usericon"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/userHome_sidebar"
        app:layout_constraintTop_toTopOf="@+id/userHome_sidebar" />

    <Button
        android:id="@+id/button13"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/maskgroup"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button15"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/notifications"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toEndOf="@+id/button13"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button16"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/podcast"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toEndOf="@+id/button15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="54dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="@+id/userHome_btnSearch"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="@+id/userHome_btnSearch"
        app:layout_constraintTop_toTopOf="@+id/userHome_btnSearch" />


</androidx.constraintlayout.widget.ConstraintLayout>